fix: exception when reading server defaults